--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "react-slider",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "index.jsx",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mingwiki/react-slider.git"
